# media-tool

./: .gitignore  README.md  cli.py  pyproject.toml  requirement.txt  run.py
media_tool/: config.py  converter.py  downloader.py  gui.py  settings_gui.py  utils.py
media_tool/downloaders/: base.py  niconico.py  youtube.py
scripts/: generate_config.py
