[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "media_tool"
version = "0.1.0"
description = "Media conversion and download tool"
authors = [{ name="Your Name", email="your@email.com" }]
dependencies = [
    "ffmpeg-python",
    "yt-dlp",
    "platformdirs",
    "tk",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "."} 

[tool.setuptools.packages.find]     # 自動発見の条件を明示
where    = ["."]
include  = ["media_tool*"]          # ここだけパッケージ化
exclude  = ["extracted*", "tests*"] # 誤検出し得るディレクトリを除外

[tool.pixi.workspace]
channels = ["conda-forge"]

[tool.pixi.pypi-dependencies]
media_tool = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11,<3.12"
ffmpeg = "*"   

[tool.pixi.tasks]
gui = "python -m media_tool.gui"
cli = "python -m cli"
settings = "python -m media_tool.settings_gui"
generate-config = "python scripts/generate_config.py"
